--- a/src/components/icons/tech/FabricIcon.astro
+++ b/src/components/icons/tech/FabricIcon.astro
@@ -1,4 +1,11 @@
-<svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<svg
+  width="18"
+  height="18"
+  viewBox="0 0 18 18"
+  fill="none"
+  xmlns="http://www.w3.org/2000/svg"
+  xmlns:xlink="http://www.w3.org/1999/xlink"
+>
   <g clip-path="url(#clip0_9_2)">
     <rect x="-1" y="-1" width="20" height="20" fill="url(#pattern0)"></rect>
     <rect x="0.5" y="3" width="17.25" height="12.8056" fill="url(#pattern1)"></rect>
@@ -13,7 +20,12 @@
     <clipPath id="clip0_9_2">
       <rect width="18" height="18" fill="white"></rect>
     </clipPath>
-    <image id="image0_9_2" width="720" height="720" xlink:href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAtAAAALQAQMAAACDmdXfAAAAAXNSR0IB2cksfwAAAANQTFRFAAAAp3o92gAAAAF0Uk5TAEDm2GYAAABVSURBVHic7cEBAQAAAIIg/69uSEABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADwaP/wAAE2RkvwAAAAAElFTkSuQmCC" />
+    <image
+      id="image0_9_2"
+      width="720"
+      height="720"
+      xlink:href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAtAAAALQAQMAAACDmdXfAAAAAXNSR0IB2cksfwAAAANQTFRFAAAAp3o92gAAAAF0Uk5TAEDm2GYAAABVSURBVHic7cEBAQAAAIIg/69uSEABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADwaP/wAAE2RkvwAAAAAElFTkSuQmCC"
+    />
     <image
       id="image1_9_2"
       width="621"
