--- a/src/components/project/ProjectLink.astro
+++ b/src/components/project/ProjectLink.astro
@@ -20,7 +20,7 @@ const { url, url_text, github_url } = Astro.props
     "py-3 px-7",
     "font-bold text-white",
     "bg-black hover:bg-zinc-800",
-    "transition duration-300"
+    "transition duration-300",
   ]}
 >
   <span class="flex items-center justify-center">
