--- a/src/components/project/ProjectTool.astro
+++ b/src/components/project/ProjectTool.astro
@@ -19,7 +19,5 @@ const { tool_id, tool_name, tool_index, tools_length } = Astro.props
   <span class="py-1 mt-1 ml-2 mr-1 text-zinc-800">
     {tool_name}
   </span>
-  {tool_index !== tools_length - 1 && (
-    <span class="text-gray-300 pl-2 pr-3">&middot;</span>
-  )}
+  {tool_index !== tools_length - 1 && <span class="text-gray-300 pl-2 pr-3">&middot;</span>}
 </span>
