chore: update threads link

--- a/src/components/LinkBar.astro
+++ b/src/components/LinkBar.astro
@@ -46,7 +46,7 @@ import ThreadsIcon from "./icons/ThreadsIcon.astro"
       <DigitalArtIcon />
     </a>
     <a
-      href="https://www.threads.net/@rica_zz"
+      href="https://www.threads.net/@artwithrica"
       target="_blank"
       class="link-button mr-2"
       rel="noopener noreferrer"
