fix: update tooltip text for links

--- a/src/components/LinkBar.astro
+++ b/src/components/LinkBar.astro
@@ -41,7 +41,7 @@ import ThreadsIcon from "./icons/ThreadsIcon.astro"
       target="_blank"
       class="link-button mr-2"
       rel="noopener noreferrer"
-      data-tooltip-text="Digital Art"
+      data-tooltip-text="Instagram"
     >
       <DigitalArtIcon />
     </a>
@@ -50,7 +50,7 @@ import ThreadsIcon from "./icons/ThreadsIcon.astro"
       target="_blank"
       class="link-button mr-2"
       rel="noopener noreferrer"
-      data-tooltip-text="Photography"
+      data-tooltip-text="Threads"
     >
       <ThreadsIcon />
     </a>
